<resources>
    <string name="app_name">FundatecHeroes</string>
    <string name="title_activity_profile_screen">ProfileScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="campo_email">E-mail</string>
    <string name="campo_senha">Senha</string>
    <string name="botao_login">Login</string>
    <string name="botao_criar_conta">Criar conta</string>
    <string name="campo_nome">Nome</string>
    <string name="sucesso_criar_conta">Conta criada com sucesso</string>
    <string name="nome_invalido">Nome inválido</string>
    <string name="email_embranco_login">O campo de e-mail está em branco</string>
    <string name="senha_embranco_login">O campo de senha está em branco</string>
    <string name="campo_descricao">Descrição</string>
    <string name="data_nascimento">Data de nascimento</string>
    <string name="personagem_url">URL da imagem</string>
    <string name="criar_personagem">Criar personagem</string>
    <string name="campo_vazio">Um ou mais campos estão vazios</string>
    <string name="personagem_criado">Personagem criado com sucesso!</string>
    <string name="erro_geral_login">Email ou senha inválidos</string>
    <string name="nome_invalido_profile">Nome inválido</string>
    <string name="email_invalido_profile">E-mail inválido</string>
    <string name="senha_invalida_profile">Senha inválido</string>
    <string name="erro_geral_profile">Nome, e-mail ou senha inválidos</string>
    <string name="erro_geral_character">Erro na criação do personagem</string>
    <string name="idade_invalida">O personagem não pode ter menos que 1 ano</string>
    <string name="lista_vazia">O usuário não possui nenhum personagem registrado</string>
    <string name="deletar_personagem">Personagem deletado com sucesso</string>
    <string-array name="heroi_ou_vilao">
        <item>Selecione</item>
        <item>Herói</item>
        <item>Vilão</item>
    </string-array>
    <string-array name="marvel_ou_dc">
        <item>Selecione</item>
        <item>Marvel</item>
        <item>DC</item>
    </string-array>

</resources>