<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginScreenActivity">

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="15dp"
      android:src="@drawable/logofundatec"
      app:layout_constraintBottom_toTopOf="@+id/input_login_email"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/input_login_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="30dp"
      app:boxBackgroundColor="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/campo_email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        />
  </com.google.android.material.textfield.TextInputLayout>


  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/input_login_senha"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="30dp"
      app:boxBackgroundColor="@color/white"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/input_login_email">

    <EditText
        android:id="@+id/login_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/campo_senha"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/botao_login"
      android:layout_marginTop="20dp"
      app:layout_constraintStart_toStartOf="@id/input_login_senha"
      app:layout_constraintTop_toBottomOf="@+id/input_login_senha" />

  <Button
      android:id="@+id/criarConta"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="60dp"
      android:text="@string/botao_criar_conta"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login" />


</androidx.constraintlayout.widget.ConstraintLayout>