<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_character_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="200dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <EditText
            android:id="@+id/character_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_nome"
            android:inputType="textPersonName"
            android:textSize="20dp"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_character_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_character_name"
        >

        <EditText
            android:id="@+id/character_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_descricao"
            android:inputType="textPersonName"
            android:textSize="20dp"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/hero_or_villain"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/input_character_description"
        app:layout_constraintTop_toBottomOf="@+id/input_character_description"
        />

    <EditText
        android:id="@+id/date_of_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/data_nascimento"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@id/input_character_description"
        app:layout_constraintTop_toBottomOf="@id/input_character_description"
        android:layout_marginTop="30dp"
        />

    <Spinner
        android:id="@+id/marvel_or_dc"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/hero_or_villain"
        app:layout_constraintTop_toBottomOf="@+id/hero_or_villain"
        />

    <EditText
        android:id="@+id/age"
        android:hint="Idade"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/date_of_birth"
        app:layout_constraintEnd_toEndOf="@id/date_of_birth"
        app:layout_constraintTop_toBottomOf="@+id/hero_or_villain"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_character_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marvel_or_dc"
        >

        <EditText
            android:id="@+id/character_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/personagem_url"
            android:inputType="textUri"
            android:textSize="20dp"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/criar_personagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/input_character_url"
        android:text="@string/criar_personagem"
        android:layout_marginTop="50dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>